--- a/Yahtzee.html
+++ b/Yahtzee.html
@@ -25,6 +25,10 @@
 	td.label {
 		text-align: right;
 	}
+	td.button {
+		text-align: right;
+		width: 100px;
+	}
 	td.box {
 		border:2px #EFEFEF inset;
 		background-color: #AEAFFF;
@@ -49,24 +53,30 @@
 	<!--
 	
 	var v = new Array(0,0,0,0,0);
-	var h = new Array(false,false,false,false,false); //false = unclicked
+	var h = new Array(false,false,false,false,false); //f alse = unclicked
 	var f = new Array(0,0,0,0,0,0,0); // f[1] =how many 1s
-	
+
 	function roll()
 	{
-		f[1]=f[2]=f[3]=f[4]=f[5]=f[6]=0;
+		f[1] = f[2] = f[3] = f[4] = f[5] = f[6] =0;
 		
-		for(var i=0; i<5; i++)
+		for(var i = 0; i < 5; i++)
 		{
-			if(!h[i]){
-				d = document.getElementByID('d' + i);
+			if(!h[i])
+			{
+				d = document.getElementById('d' + i);
 				v[i] = Math.floor(Math.random() * 6) + 1;
 				d.src = 'pix/dice'+ v[i] + '.gif';
-				}
 				f[v[i]]++;
+			}
 		}
 	}
 
+	function clr(i) {
+		var d = document.getElementById('s' + i);
+		d.innerHTML = ""; // Clear the inner HTML
+	}
+	
 	function hold(i)
 	{
 		d = document.getElementById('d' + i);
@@ -99,46 +109,47 @@
         <img id='d3' onClick='hold(3)' src='pix/dice0.gif'>
         <img id='d4' onClick='hold(4)' src='pix/dice0.gif'>
     </div>
-
+	<br>
+	<br>
 	<table class='body'>
 		<!-- Row 1/10 -->
 		<tr>
 			<td class='label'> 1's </td>
-			<td id = 's1' onMouseOver= 'score(1)' class='box'> </td>
+			<td class='box' id = 's1' onMouseOver= 'score(1);' onMouseOut='clr(1)'> </td>
 			<!-- Button 1/2 -->
-			<td rowspan='5'><button class='roll' onClick='roll()'> Roll </button></td>
+			<td class = 'button' rowspan='5'><button class='roll' onClick='roll()'> Roll </button></td>
 		</tr>
 		<!-- Row 2/10 -->
 		<tr> 
 			<td class='label'> 2's </td>
-			<td class='box'> </td>
+			<td class='box' id = 's2' onMouseOver= 'score(2);' onMouseOut='clr(2)'> </td>
 		</tr>
 		<!-- Row 3/10 -->
 		<tr>
 			<td class='label'> 3's </td>
-			<td class='box'> </td>
+			<td class='box id = 's3' onMouseOver= 'score(3);' onMouseOut='clr(3)''> </td>
 		</tr>
 		<!-- Row 4/10 -->
 		<tr>
 			<td class='label'> 4's </td>
-			<td class='box'> </td>
+			<td class='box' id = 's4' onMouseOver= 'score(4);' onMouseOut='clr(4)'> </td>
 		</tr>
 		<!-- Row 5/10 -->
 		<tr>
 			<td class='label'> 5's </td>
-			<td class='box'> </td>
+			<td class='box' id = 's5' onMouseOver= 'score(5);' onMouseOut='clr(5)'> </td>
 		</tr>
 		<!-- Row 6/10 -->
 		<tr>
 			<td class='label'> 6's </td>
-			<td class='box'> </td>
+			<td class='box' id = 's6' onMouseOver= 'score(6);' onMouseOut='clr(6)'> </td>
 			<!-- Button 2/2 -->
-			<td rowspan='5'><button class='new' onCLick='new_game()'> New Game </button></td>
+			<td class = 'button' rowspan='5'><button class='new' onCLick='new_game()'> New Game </button></td>
 		</tr>
 		<!-- Row 7/10 -->
 		<tr>
 			<td class='label'> 3 of a kind </td>
-			<td class='box'> </td>
+			<td class='box' id = 's7' onMouseOver= 'score(7);' onMouseOut='clr(7)'> </td>
 		</tr>
 		<!-- Row 8/10 -->
 		<tr>
