add totaling and lock in funtions

--- a/Yahtzee.html
+++ b/Yahtzee.html
@@ -52,31 +52,116 @@
 	<script language="JavaScript">
 	<!--
 	
-	var v = new Array(0,0,0,0,0);
-	var h = new Array(false,false,false,false,false); //f alse = unclicked
-	var f = new Array(0,0,0,0,0,0,0); // f[1] =how many 1s
+	var v = [0,0,0,0,0];
+	var h = [false,false,false,false,false]; //f alse = unclicked
+	var f = [0,0,0,0,0,0,0]; // f[1] =how many 1s
+	var rollCount = 0;
 
+	/* Roll function to roll the dice*/
 	function roll()
 	{
-		f[1] = f[2] = f[3] = f[4] = f[5] = f[6] =0;
-		
-		for(var i = 0; i < 5; i++)
-		{
-			if(!h[i])
+		if (rollCount < 3)
+		{	
+			for(var i = 1; i <= 6; i++)
 			{
-				d = document.getElementById('d' + i);
-				v[i] = Math.floor(Math.random() * 6) + 1;
-				d.src = 'pix/dice'+ v[i] + '.gif';
+				f[i] = 0;
+			}
+
+			for(var i = 0; i < 5; i++)
+			{
+				if (!h[i])
+				{
+					var d = document.getElementById('d' + i);
+					v[i] = Math.floor(Math.random() * 6) + 1;
+					d.src = 'pix/dice'+ v[i] + '.gif';
+				}
 				f[v[i]]++;
 			}
+			rollCount++;
+		}
+		else
+		{
+			alert('No more rolls allowed. Start new game.')
 		}
 	}
 
-	function clr(i) {
-		var d = document.getElementById('s' + i);
-		d.innerHTML = ""; // Clear the inner HTML
+	function showPotentialScore(i)
+	{
+		var potentialScore = calculateScore(i);
+		var scoreCell = document.getElementById('s' + i);
+		scoreCell.innerHTML = potentialScore;
+	}
+
+	/* Clear function to clear scores on mouseOut*/
+	function clearPotentialScore(i)
+	{
+		var scoreCell = document.getElementById('s' + i);
+		if (!scoreCell.classList.contains('confirmed'))
+		{
+			scoreCell.innerHTML = "";
+		}
+	}
+	/* Score function to calculate various score types */
+	function calculateScore(i)
+	{
+		var calculatedScore = 0;
+		/* individual score for category i */
+		if (i >= 1 && i <= 6)
+		{
+			calculatedScore = f[i] * i;
+		}
+		/* 3 of a kind */
+		else if (i == 7)
+		{
+			if (f.some(count => count >= 3))
+			{
+				calculatedScore = v.reduce((a, b) => a + b, 0);
+			}
+		}
+		/* 4 of a kind */
+		else if (i == 8)
+		{
+			if (f.some(count => count >= 4))
+			{
+				calculatedScore = v.reduce((a, b) => a + b, 0);
+			}
+		}
+		/* Yahtzee */
+		else if (i == 9)
+		{
+			if (f.some(count => count == 5))
+			{
+				calculatedScore = v.reduce((a, b) => a + b, 0);
+			}
+		}
+		var scoreCell = document.getElementById('s' + i);
+		scoreCell.innerHTML = calculatedScore;
+		return calculatedScore;
 	}
 	
+	function confirmScore(i)
+	{
+		var scoreCell = document.getElementById('s' + i);
+		scoreCell.classList.add('confirmed');
+		updateTotal();
+	}
+
+	function updateTotal()
+	{
+		var total = 0;
+    	for (var i = 1; i <= 9; i++)
+		{
+			var scoreCell = document.getElementById('s' + i);
+        	if (scoreCell.classList.contains('confirmed'))
+			{
+				total += parseInt(scoreCell.innerHTML) || 0;
+			}
+		}
+		var totalCell = document.getElementById('totalScore'); // Assuming you have a total score cell
+		totalCell.innerHTML = total;
+	}
+
+	/* Hold function to lock dice before re-roll*/
 	function hold(i)
 	{
 		d = document.getElementById('d' + i);
@@ -91,16 +176,28 @@
 		}
 	}
 
-	function score(i)
-	{
-		d=document.getElementById('s' + i);
-		d.innerHTML = f[i] * i;
-	}
-	
+	/* New game function to reset all values to the default state*/
 	function new_game()
 	{
-		
-	
+		/* Reset roll count */
+		rollCount = 0;
+
+		/* Reset dice values, images and hold states */
+		for(var i = 0; i < 5; i++)
+		{
+			v[i] = 0;
+			h[i] = false;
+			var diceImg = document.getElementById('d' + i);
+			diceImg.src = 'pix/dice0.gif';
+		}
+
+		/* Reset scores */
+		for(var j = 1; j<= 6; j++)
+		{
+			f[j] = 0;
+			var scoreCell = document.getElementById('s' + j);
+			scoreCell.innerHTML = "";
+		}
 	}
 	
 	//-->
@@ -121,56 +218,56 @@
 		<!-- Row 1/10 -->
 		<tr>
 			<td class='label'> 1's </td>
-			<td class='box' id='s1' onMouseOver= 'score(1)' onMouseOut='clr(1)'> </td>
+			<td class='box' id='s1' onMouseOver='showPotentialScore(1)' onMouseOut='clearPotentialScore(1)' onClick='confirmScore(1)'> </td>
 			<!-- Button 1/2 -->
 			<td class = 'button' rowspan='5'><button class='roll' onClick='roll()'> Roll </button></td>
 		</tr>
 		<!-- Row 2/10 -->
 		<tr> 
 			<td class='label'> 2's </td>
-			<td class='box' id='s2' onMouseOver= 'score(2);' onMouseOut='clr(2)'> </td>
+			<td class='box' id='s2' onMouseOver='showPotentialScore(2)' onMouseOut='clearPotentialScore(2)' onClick='confirmScore(2)'> </td>
 		</tr>
 		<!-- Row 3/10 -->
 		<tr>
 			<td class='label'> 3's </td>
-			<td class='box' id='s3' onMouseOver= 'score(3);' onMouseOut='clr(3)''> </td>
+			<td class='box' id='s3' onMouseOver='showPotentialScore(3)' onMouseOut='clearPotentialScore(3)' onClick='confirmScore(3)'> </td>
 		</tr>
 		<!-- Row 4/10 -->
 		<tr>
 			<td class='label'> 4's </td>
-			<td class='box' id='s4' onMouseOver= 'score(4);' onMouseOut='clr(4)'> </td>
+			<td class='box' id='s4' onMouseOver='showPotentialScore(4)' onMouseOut='clearPotentialScore(4)' onClick='confirmScore(4)'> </td>
 		</tr>
 		<!-- Row 5/10 -->
 		<tr>
 			<td class='label'> 5's </td>
-			<td class='box' id='s5' onMouseOver= 'score(5);' onMouseOut='clr(5)'> </td>
+			<td class='box' id='s5' onMouseOver='showPotentialScore(5)' onMouseOut='clearPotentialScore(5)' onClick='confirmScore(5)'> </td>
 		</tr>
 		<!-- Row 6/10 -->
 		<tr>
 			<td class='label'> 6's </td>
-			<td class='box' id='s6' onMouseOver= 'score(6);' onMouseOut='clr(6)'> </td>
+			<td class='box' id='s6' onMouseOver='showPotentialScore(6)' onMouseOut='clearPotentialScore(6)' onClick='confirmScore(6)'> </td>
 			<!-- Button 2/2 -->
 			<td class = 'button' rowspan='5'><button class='new' onClick='new_game()'> New Game </button></td>
 		</tr>
 		<!-- Row 7/10 -->
 		<tr>
 			<td class='label'> 3 of a kind </td>
-			<td class='box' id='s7' onMouseOver= 'score(7);' onMouseOut='clr(7)'> </td>
+			<td class='box' id='s7' onMouseOver='showPotentialScore(7)' onMouseOut='clearPotentialScore(7)' onClick='confirmScore(7)'> </td>
 		</tr>
 		<!-- Row 8/10 -->
 		<tr>
 			<td class='label'> 4 of a kind </td>
-			<td class='box'> </td>
+			<td class='box' id='s8' onMouseOver = 'showPotentialScore(8)' onMouseOut = 'clearPotentialScore(8)' onClick = 'confirmScore(8)'> </td>
 		</tr>
 		<!-- Row 9/10 -->
 		<tr>
 			<td class='label'> Yahtzee </td>
-			<td class='box'> </td>
+			<td class='box' id='s9' onMouseOver = 'showPotentialScore(9)' onMouseOut = 'clearPotentialScore(9)' onClick = 'confirmScore(9)'> </td>
 		</tr>
 		<!-- Row 10/10 -->
 		<tr>
 			<td class='label'> Total </td>
-			<td class='box'> </td>
+			<td class='box' id = 'totalScore'> </td>
 		</tr>
 	</table>
 
